# healthsh

./: .gitignore  CLAUDE.md  HEALTHSH_ROADMAP.md  LICENSE  README.md  pyproject.toml  release_notes_v0.1.0.md  release_notes_v0.2.0.md  release_notes_v0.5.0.md  release_notes_v0.6.0.md
healthsh/: __init__.py  app.py
healthsh/assets/: __init__.py
healthsh/core/: __init__.py  analysis.py  formatting.py  log_severity.py  thresholds.py
healthsh/domain/: __init__.py  agent.py  container.py  insight.py  log_entry.py  metrics.py  process.py
healthsh/infra/: __init__.py  autostart.py  settings_store.py
healthsh/services/: AGENT_BASE_LICENSE_AND_PROVENANCE.md  __init__.py  ai_service.py  ai_tools.py  collector_service.py  history_service.py  insight_service.py  settings_controller.py  settings_service.py
healthsh/ui/: __init__.py  icons.py  main_window.py  sidebar.py  tray.py
packaging/healthsh.AppDir/: AppRun  healthsh.desktop
scripts/: build_appimage.sh
tests/: test_formatting.py  test_icons.py  test_layering.py  test_log_severity.py  test_main_window.py  test_metrics_entities.py  test_palette.py  test_sidebar.py  test_tray.py
tests/collectors/: test_basic_collectors.py  test_docker_collector.py  test_journald_collector.py  test_process_collector.py  test_system_collector.py
tests/core/: test_analysis.py
tests/db/: test_sqlite_store.py
tests/infra/: test_autostart.py
tests/screens/: test_ai_screen.py  test_dashboard_screen.py  test_docker_screen.py  test_logs_screen.py  test_settings_screen.py  test_system_screen.py
tests/services/: test_ai_service.py  test_ai_tools.py  test_collector_service.py  test_history_service.py  test_insight_service.py  test_settings_controller.py  test_settings_service.py
tests/threads/: test_metrics_worker.py  test_slow_worker.py
tests/widgets/: test_ai_banner.py  test_container_card.py  test_container_list.py  test_core_bars.py  test_form_rows.py  test_gauge.py  test_log_filter_bar.py  test_log_line.py  test_process_list.py  test_process_table.py  test_sparkline.py  (+1 more)
(+54 files in other folders)
